# Otus_HPsquare

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output.txt
