# CMakeList.txt: проект CMake для HarryPotter; включите исходный код и определения,
cmake_minimum_required (VERSION 3.8)

# Включение горячей перезагрузки для компиляторов MSVC, если поддерживается.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("HarryPotter")

# источник в исполняемый файл этого проекта.
add_executable (HarryPotter "main.cpp")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET HarryPotter PROPERTY CXX_STANDARD 20)
endif()

